--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "photoswipe": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
+    "react-photoswipe-gallery": "^1.3.6",
+    "react-responsive-carousel": "^3.2.21",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
+    "tsparticles": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
